--- a/index.html
+++ b/index.html
@@ -1,16 +1,248 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Simple Marker</title>
-    <!-- The callback parameter is required, so we use console.debug as a noop -->
-    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAiKnExLsUSk2XOWzYJWUrYbNxE8ZceAHE&callback=console.debug&libraries=maps,marker&v=beta">
+    <title>Neighborhood Discovery</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/handlebars/4.7.7/handlebars.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+    <link href="neighborhood_discovery.css" rel="stylesheet">
+    <script src="neighborhood_discovery.js"></script>
+    <script>
+      const CONFIGURATION = {
+        "capabilities": {"search":true,"distances":true,"directions":true,"contacts":true,"atmospheres":true,"thumbnails":true},
+        "pois": [
+          {"placeId": "ChIJK42vZhR8ao4RnGJzpJfizOI"},
+          {"placeId": "ChIJ-3WTTxR8ao4RiSQBaDnNwy4"},
+          {"placeId": "ChIJs3pSCz58ao4R6McF72oAM1Y"},
+          {"placeId": "ChIJA6r1bTt8ao4RdmEbfjeZGzo"},
+          {"placeId": "ChIJW8edWxR8ao4R8SrGGs0eBd8"},
+          {"placeId": "ChIJw6sxNDt8ao4RoLzGmCImQXs"},
+          {"placeId": "ChIJoytTDDt8ao4RmT819enoh68"},
+          {"placeId": "ChIJl5HiAj58ao4RzTnkFfCuWNc"},
+          {"placeId": "ChIJaSZZJdl9ao4R4KkHhpubC9E"},
+          {"placeId": "ChIJzxe1XBR8ao4RO4en8tfd6gU"},
+          {"placeId": "ChIJ9xHMTzp8ao4RuNb_-2UhSQE"},
+          {"placeId": "ChIJRdFRAhZ8ao4Rq3t6IlQv5BE"},
+          {"placeId": "ChIJ94Nhaz58ao4REfnkIywUea8"},
+          {"placeId": "ChIJM0gG8zp8ao4RtA3Vqi8NRBE"},
+          {"placeId": "ChIJD2YTCTt8ao4R3kKtJlgUOiQ"},
+          {"placeId": "ChIJd0VpZDx8ao4R5zG9GK0c2hc"},
+          {"placeId": "ChIJBw9Ndzx8ao4RnjEN1cE6dGM"},
+          {"placeId": "ChIJBa5ulgp-ao4RWBQL3Qi0yFE"},
+          {"placeId": "ChIJpZ9B-LB9ao4Rne9a9lm8Ldw"},
+          {"placeId": "ChIJCTShXRR8ao4RXmGnR0OWAXg"},
+          {"placeId": "ChIJSVYEgRV8ao4RMSXfj3Mo_SY"},
+          {"placeId": "ChIJO9DtMSV8ao4RpAeKSagbq5A"},
+          {"placeId": "ChIJh_SNNjx8ao4RdZGSedqJwAE"},
+          {"placeId": "ChIJJzxFRZd9ao4RfpQiDI4JqAw"},
+          {"placeId": "ChIJZcIY8BN8ao4RhShdlgQJxCw"},
+          {"placeId": "ChIJk9P_MpN9ao4RmY6aqzAXWs0"},
+          {"placeId": "ChIJ408KMRZ8ao4R6m49L6Ep7FQ"},
+          {"placeId": "ChIJFxfEGT58ao4Rc1braWn9bsA"},
+          {"placeId": "ChIJ30fUYlF9ao4RoWnJH3c3sPU"}
+        ],
+        "centerMarker": {"icon":"circle"},
+        "mapRadius": 2000,
+        "mapOptions": {"center":{"lat":5.5520095,"lng":-73.3566646},"fullscreenControl":true,"mapTypeControl":true,"streetViewControl":false,"zoom":16,"zoomControl":true,"maxZoom":20,"mapId":""},
+        "mapsApiKey": "AIzaSyAiKnExLsUSk2XOWzYJWUrYbNxE8ZceAHE"
+      };
+
+      function initMap() {
+        new NeighborhoodDiscovery(CONFIGURATION);
+      }
     </script>
-    <link rel="stylesheet" href="./style.css"/>
+    <script id="nd-place-results-tmpl" type="text/x-handlebars-template">
+      {{#each places}}
+        <li class="place-result">
+          <div class="text">
+            <button class="name">{{name}}</button>
+            <div class="info">
+              {{#if rating}}
+                <span>{{rating}}</span>
+                <img src="https://fonts.gstatic.com/s/i/googlematerialicons/star/v15/24px.svg" alt="rating" class="star-icon"/>
+              {{/if}}
+              {{#if numReviews}}
+                <span>&nbsp;({{numReviews}})</span>
+              {{/if}}
+              {{#if priceLevel}}
+                &#183;&nbsp;<span>{{#each dollarSigns}}${{/each}}&nbsp;</span>
+              {{/if}}
+            </div>
+            <div class="info">{{type}}</div>
+          </div>
+          <button class="photo" style="background-image:url({{photos.0.urlSmall}})" aria-label="show photo in viewer"></button>
+        </li>
+      {{/each}}
+    </script>
+    <script id="nd-place-details-tmpl" type="text/x-handlebars-template">
+      <div class="navbar">
+        <button class="back-button">
+          <img class="icon" src="https://fonts.gstatic.com/s/i/googlematerialicons/arrow_back/v11/24px.svg" alt="back"/>
+          Back
+        </button>
+      </div>
+      <header>
+        <h2>{{name}}</h2>
+        <div class="info">
+          {{#if rating}}
+            <span class="star-rating-numeric">{{rating}}</span>
+            <span>
+              {{#each fullStarIcons}}
+                <img src="https://fonts.gstatic.com/s/i/googlematerialicons/star/v15/24px.svg" alt="full star" class="star-icon"/>
+              {{/each}}
+              {{#each halfStarIcons}}
+                <img src="https://fonts.gstatic.com/s/i/googlematerialicons/star_half/v17/24px.svg" alt="half star" class="star-icon"/>
+              {{/each}}
+              {{#each emptyStarIcons}}
+                <img src="https://fonts.gstatic.com/s/i/googlematerialicons/star_outline/v9/24px.svg" alt="empty star" class="star-icon"/>
+              {{/each}}
+            </span>
+          {{/if}}
+          {{#if numReviews}}
+            <a href="{{url}}" target="_blank">{{numReviews}} reviews</a>
+          {{else}}
+            <a href="{{url}}" target="_blank">See on Google Maps</a>
+          {{/if}}
+          {{#if priceLevel}}
+            &#183;
+            <span class="price-dollars">
+              {{#each dollarSigns}}${{/each}}
+            </span>
+          {{/if}}
+        </div>
+        {{#if type}}
+          <div class="info">{{type}}</div>
+        {{/if}}
+        {{#if duration}}
+          <div class="info">
+            <img src="https://fonts.gstatic.com/s/i/googlematerialicons/directions_car/v11/24px.svg" alt="car travel" class="travel-icon"/>
+            <span>&nbsp;{{duration.text}}</span>
+          </div>
+        {{/if}}
+      </header>
+      <div class="section">
+        {{#if address}}
+          <div class="contact">
+            <img src="https://fonts.gstatic.com/s/i/googlematerialicons/place/v10/24px.svg" alt="Address" class="icon"/>
+            <div class="text">
+              {{address}}
+            </div>
+          </div>
+        {{/if}}
+        {{#if website}}
+          <div class="contact">
+            <img src="https://fonts.gstatic.com/s/i/googlematerialicons/public/v10/24px.svg" alt="Website" class="icon"/>
+            <div class="text">
+              <a href="{{website}}" target="_blank">{{websiteDomain}}</a>
+            </div>
+          </div>
+        {{/if}}
+        {{#if phoneNumber}}
+          <div class="contact">
+            <img src="https://fonts.gstatic.com/s/i/googlematerialicons/phone/v10/24px.svg" alt="Phone number" class="icon"/>
+            <div class="text">
+              {{phoneNumber}}
+            </div>
+          </div>
+        {{/if}}
+        {{#if openingHours}}
+          <div class="contact">
+            <img src="https://fonts.gstatic.com/s/i/googlematerialicons/schedule/v12/24px.svg" alt="Opening hours" class="icon"/>
+            <div class="text">
+              {{#each openingHours}}
+                <div>
+                  <span class="weekday">{{days}}</span>
+                  <span class="hours">{{hours}}</span>
+                </div>
+              {{/each}}
+            </div>
+          </div>
+        {{/if}}
+      </div>
+      {{#if photos}}
+        <div class="photos section">
+          {{#each photos}}
+            <button class="photo" style="background-image:url({{urlSmall}})" aria-label="show photo in viewer"></button>
+          {{/each}}
+        </div>
+      {{/if}}
+      {{#if reviews}}
+        <div class="reviews section">
+          <p class="attribution">Reviews by Google users</p>
+          {{#each reviews}}
+            <div class="review">
+              <a class="reviewer-identity" href="{{author_url}}" target="_blank">
+                <div class="reviewer-avatar" style="background-image:url({{profile_photo_url}})"></div>
+                <div class="reviewer-name">{{author_name}}</div>
+              </a>
+              <div class="rating info">
+                <span>
+                  {{#each fullStarIcons}}
+                    <img src="https://fonts.gstatic.com/s/i/googlematerialicons/star/v15/24px.svg" alt="full star" class="star-icon"/>
+                  {{/each}}
+                  {{#each halfStarIcons}}
+                    <img src="https://fonts.gstatic.com/s/i/googlematerialicons/star_half/v17/24px.svg" alt="half star" class="star-icon"/>
+                  {{/each}}
+                  {{#each emptyStarIcons}}
+                    <img src="https://fonts.gstatic.com/s/i/googlematerialicons/star_outline/v9/24px.svg" alt="empty star" class="star-icon"/>
+                  {{/each}}
+                </span>
+                <span class="review-time">{{relative_time_description}}</span>
+              </div>
+              <div class="info">{{text}}</div>
+            </div>
+          {{/each}}
+        </div>
+      {{/if}}
+      {{#if html_attributions}}
+        <div class="section">
+          {{#each html_attributions}}
+            <p class="attribution">{{{this}}}</p>
+          {{/each}}
+        </div>
+      {{/if}}
+    </script>
   </head>
   <body>
-    <gmp-map center="5.551588855744794, -73.35618154089957" zoom="18" map-id="DEMO_MAP_ID">
-      <gmp-advanced-marker position="40.12150192260742,-100.45039367675781" title="My location">
-      </gmp-advanced-marker>
-    </gmp-map>
+    <div class="neighborhood-discovery">
+      <div class="places-panel panel no-scroll">
+        <header class="navbar">
+          <div class="search-input">
+            <input class="place-search-input" placeholder="Search nearby places">
+            <button class="place-search-button">
+              <img src="https://fonts.gstatic.com/s/i/googlematerialicons/search/v11/24px.svg" alt="search"/>
+            </button>
+          </div>
+        </header>
+        <div class="results">
+          <ul class="place-results-list"></ul>
+        </div>
+        <button class="show-more-button sticky">
+          <span>Show More</span>
+          <img class="right" src="https://fonts.gstatic.com/s/i/googlematerialicons/expand_more/v11/24px.svg" alt="expand"/>
+        </button>
+      </div>
+      <div class="details-panel panel"></div>
+      <div class="map"></div>
+      <div class="photo-modal">
+        <img alt="place photo"/>
+        <div>
+          <button class="back-button">
+            <img class="icon" src="https://fonts.gstatic.com/s/i/googlematerialicons/arrow_back/v11/24px.svg" alt="back"/>
+          </button>
+          <div class="photo-text">
+            <div class="photo-place"></div>
+            <div class="photo-attrs">Photo by <span></span></div>
+          </div>
+        </div>
+      </div>
+      <svg class="marker-pin" xmlns="http://www.w3.org/2000/svg" width="26" height="38" fill="none">
+        <path d="M13 0C5.817 0 0 5.93 0 13.267c0 7.862 5.59 10.81 9.555 17.624C12.09 35.248 11.342 38 13 38c1.723 0 .975-2.817 3.445-7.043C20.085 24.503 26 21.162 26 13.267 26 5.93 20.183 0 13 0Z"/>
+      </svg>
+    </div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAiKnExLsUSk2XOWzYJWUrYbNxE8ZceAHE&callback=initMap&libraries=places,geometry&solution_channel=GMP_QB_neighborhooddiscovery_v2_cABCDEF" async defer></script>
   </body>
 </html>
