nos devolvemos a lo que teniamos antes

--- a/lineas entre marcadores/index.html
+++ b/lineas entre marcadores/index.html
@@ -17,9 +17,9 @@
 <body>
   <div id="map"></div>
   <div id="floating-panel">
-    Origen: <input type="text" readonly id="origin" /> 
-    Destino: <input type="text" readonly id="destination" /><br />
-    Distancia: <input type="text" readonly id="distance" /> metros
+    Origin: <input type="text" readonly id="origin" /> Destination:
+    <input type="text" readonly id="destination" /><br />
+    Heading: <input type="text" readonly id="heading" /> degrees
   </div>
 
   <!-- 
