--- a/lineas entre marcadores/index.html
+++ b/lineas entre marcadores/index.html
@@ -17,9 +17,11 @@
 <body>
   <div id="map"></div>
   <div id="floating-panel">
+    <button id = "boton-inicio">Inicio</button>
     Origen: <input type="text" readonly id="origin" /> 
+    <button id = "boton-destino">Destino</button>
     Destino: <input type="text" readonly id="destination" /><br />
-    Distancia: <input type="text" readonly id="distance" /> metros
+    Distancia de la ruta más corta: <input type="text" readonly id="distance" /> metros
   </div>
 
   <!-- 
