recoding arco.js

--- a/deletemenu/index.html
+++ b/deletemenu/index.html
@@ -14,7 +14,7 @@
     <p id="nodoSeleccionado"></p>
 
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initialize&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAiKnExLsUSk2XOWzYJWUrYbNxE8ZceAHE&callback=initialize&v=weekly"
       defer
     ></script>
   </body>
