change update method

--- a/lineas entre marcadores/index.html
+++ b/lineas entre marcadores/index.html
@@ -24,6 +24,10 @@
     Distancia de la ruta más corta: <input type="text" readonly id="distance" /> metros
   </div>
 
+  <div id="arc-A-B">Distance: </div>
+  <div id="arc-B-C">Distance: </div>
+  <!-- Add more elements for other arcs -->
+
   <!-- 
       The `defer` attribute causes the callback to execute after the full HTML
       document has been parsed. For non-blocking uses, avoiding race conditions,
