distancias entre todos los nodos funcionando

--- a/lineas entre marcadores/index.html
+++ b/lineas entre marcadores/index.html
@@ -24,9 +24,17 @@
     Distancia de la ruta más corta: <input type="text" readonly id="distance" /> metros
   </div>
 
-  <div id="arc-A-B">Distance: </div>
-  <div id="arc-B-C">Distance: </div>
-  <!-- Add more elements for other arcs -->
+
+  <div id="arc-A-B">Distancia entre el arco A y B: </div>
+  <div id="arc-B-C">Distancia entre el arco B y C: </div>
+  <div id="arc-C-D">Distancia entre el arco C y D: </div>
+  <div id="arc-D-A">Distancia entre el arco D y A: </div>
+  <div id="arc-E-F">Distancia entre el arco E y F: </div>
+  <div id="arc-F-G">Distancia entre el arco F y G: </div>
+  <div id="arc-G-H">Distancia entre el arco G y H: </div>
+  <div id="arc-H-E">Distancia entre el arco H y E: </div>
+  <div id="arc-I-J">Distancia entre el arco I y J: </div>
+  <div id="arc-J-A">Distancia entre el arco J y A: </div>
 
   <!-- 
       The `defer` attribute causes the callback to execute after the full HTML
